# rag-kit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic_ask.py
src/ragkit/: __init__.py  config.py  core.py
src/ragkit/chains/: __init__.py  answer.py  rewrite.py
src/ragkit/embeddings/: __init__.py
src/ragkit/ingestion/: __init__.py  loaders.py  splitters.py
src/ragkit/memory/: __init__.py  history.py
src/ragkit/providers/: __init__.py  llm.py
src/ragkit/retrieval/: __init__.py  retriever.py
src/ragkit/store/: __init__.py  chroma_store.py
src/ragkit/utils/: __init__.py  text.py
